[tool.poetry]
name = "class01"
version = "0.1.0"
description = ""
authors = ["Muhammad Aqib Khan <raiaqibkhan545@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = "^0.31.0"
pytest = "^8.3.3"
requests = "^2.32.3"
httpx = "^0.27.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
